--- a/abgabe.css
+++ b/abgabe.css
@@ -22,7 +22,7 @@ html {
 #openinghours-body {
     margin: 0;
     padding: 0;
-    background-image: url('bilder/hintergrundblumen.jpg');
+    background-image: url('/hintergrundblumen.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -37,7 +37,7 @@ html {
 #findus-body {
     margin: 0;
     padding: 0;
-    background-image: url('bilder/hintergrundblumen.jpg');
+    background-image: url('/hintergrundblumen.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
